--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "rest-crud",
-  "description": "Blocker Node.js & Mysql",
+  "name": "blocker",
+  "description": "subscribe to blockchain data. Node.js, Mysql, express, webGL",
   "version": "0.0.1",
   "private": true,
   "main": "server.js",
   "dependencies": {
     "ws":"*",
+    "body-parser": "1.9.0",
+    "ejs": "^1.0.0",
+    "express": "4.9.5",
+    "express-myconnection": "*",
+    "express-validator": "^2.6.0",
     "mysql": "*"
   }
 }
