--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "ws":"*",
     "body-parser": "1.9.0",
     "ejs": "^1.0.0",
-    "express": "4.9.5",
+    "express": "^4.8.7",
+    "is-bot": "0.0.1",
+    "request": "^2.40.0"
     "express-myconnection": "*",
     "express-validator": "^2.6.0",
     "mysql": "*"
