--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "ejs": "^1.0.0",
     "express": "^4.8.7",
     "is-bot": "0.0.1",
-    "request": "^2.40.0"
+    "request": "^2.40.0",
     "express-myconnection": "*",
     "express-validator": "^2.6.0",
     "mysql": "*"
